# edit-kit

./: Cargo.toml  LICENSE  edit-kit.cabal  stack.yaml
edit-kit/EditKit/: Buffer.hs  Editor.hs  Input.hs
src/: Main.hs  main.rs
src/edit-kit/: lib.rs
