name:                edit-kit
version:             0.1.0.0
synopsis:            Text editor
description:         A simple text editor
homepage:            http://github.com/rasendubi/edit-kit
license:             BSD3
license-file:        LICENSE
author:              Alexey Shmalko <rasen.dubi@gmail.com>
maintainer:          rasen.dubi@gmail.com
copyright:           2016 Alexey Shmalko
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:      edit-kit
    exposed-modules:     EditKit.Editor
                       , EditKit.Buffer
                       , EditKit.Input
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , text
                       , stm-containers
                       , vector
                       , stm

executable edit-kit
    hs-source-dirs:      src
    main-is:             Main.hs
    default-language:    Haskell2010
    build-depends:       base >= 4.7 && < 5
                       , edit-kit
                       , stm
                       , vty
                       , vector
    ghc-options:         -threaded